--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
     color: rgb(112, 26, 226);
 }
 
-section {
+.chamada {
     background: rgb(184,156,213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -22,3 +22,26 @@ section {
 .chamada-texto {
     margin-right: 5%;
 }
+
+h1 {
+    font-size: 40px;
+  }
+  
+  p {
+    font-size: 20px;
+  }
+
+  img {
+    height: 200px;
+  }
+
+  .categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+  }
+  
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
